# shell_hook

./: Cargo.toml  README.md
src/: app.rs  cli.rs  command.rs  error.rs  lib.rs  main.rs  message.rs  webhook.rs
tests/: app_tests.rs  cli_tests.rs  command_tests.rs  error_tests.rs  main_tests.rs  message_tests.rs  webhook_tests.rs
