[package]
name = "hook-stream"
version = "0.2.0" # Bump the version
edition = "2021"
description = "A powerful CLI tool to stream command output to webhooks with buffering, custom messages, and multi-platform support."
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"