[package]
name = "shell_hook"
version = "0.2.0"
edition = "2021"
authors = ["Royal Babu <123royalbabu@gmail.com>"]
description = "A powerful CLI tool to stream command output to webhooks with buffering, custom messages, and multi-platform support."
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
rustyline = "16.0.0"
shlex = "1.3.0"
dirs = "6.0.0"

[dev-dependencies]
httpmock = "0.7"
lazy_static = "1.4.0"

[[bin]]
name = "shell_hook"
path = "src/main.rs"

[[bin]]
name = "slh"
path = "src/main.rs"


[[test]]
name = "app_tests"
path = "tests/app_tests.rs"
